[package]
name = "solana-log-collector"
description = "Solana log collector"
documentation = "https://docs.rs/solana-log-collector"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
log = { workspace = true }
qualifier_attr = { workspace = true, optional = true }

[dev-dependencies]
solana-log-collector = { path = ".", features = ["dev-context-only-utils"] }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
dev-context-only-utils = ["dep:qualifier_attr"]
svm-internal = ["dep:qualifier_attr"]
